alignment fix

--- a/src/components/static/Information.css
+++ b/src/components/static/Information.css
@@ -2,3 +2,14 @@
     border-radius: 50%;
 }
 
+.flex-container {
+    display: flex;
+    justify-content: center;
+    /* max-width: 50%; */
+}
+.force-w{
+    max-width:100%;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
