--- a/src/components/static/Pastor.css
+++ b/src/components/static/Pastor.css
@@ -21,6 +21,9 @@
 .flex-container {
     display: flex;
     justify-content: center;
+    max-width: 71%;
+    margin-left: auto;
+    margin-right: auto;
 }
   
 .flex-container > div {
